lowercase to settings and log dir

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 # Project exclude paths
 /venv/
 /.pytest_cache/
-/pod_mqtt_publisher/Logs/
-/pod_mqtt_publisher/Settings/
+/pod_mqtt_publisher/logs/
+/pod_mqtt_publisher/settings/
+/pod_mqtt_publisher/settings/mqtt_settings.json
+/pod_mqtt_publisher/settings/socket_settings.json
