--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,18 @@
 astroid==2.5.3
+attrs==20.3.0
+iniconfig==1.1.1
 isort==5.8.0
 lazy-object-proxy==1.6.0
 mccabe==0.6.1
 mypy==0.812
 mypy-extensions==0.4.3
+packaging==20.9
 paho-mqtt==1.5.1
+pluggy==0.13.1
+py==1.10.0
 pylint==2.7.4
+pyparsing==2.4.7
+pytest==6.2.3
 toml==0.10.2
 typed-ast==1.4.3
 typing-extensions==3.7.4.3
