--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
 astroid==2.5.3
 attrs==20.3.0
+dnspython==1.16.0
+eventlet==0.31.0
+greenlet==1.1.0
 iniconfig==1.1.1
 isort==5.8.0
 lazy-object-proxy==1.6.0
@@ -10,9 +13,12 @@ packaging==20.9
 paho-mqtt==1.5.1
 pluggy==0.13.1
 py==1.10.0
+pydantic==1.8.2
 pylint==2.7.4
 pyparsing==2.4.7
 pytest==6.2.3
+python-dotenv==0.18.0
+six==1.16.0
 toml==0.10.2
 typed-ast==1.4.3
 typing-extensions==3.7.4.3
